objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family home</fullName>
                </value>
                <value>
                    <fullName>Town home</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_AAS_XAA_Account_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AAS/XAA Account Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_AAS_XAA_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AAS/XAA Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ACBS_Facility_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACBS Facility Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Account_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Balance_Previous_Month_End__c</fullName>
        <label>Balance - Previous Month End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Bank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Date_Opened_Override_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Opened - Override Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_Opened_Override_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Opened - Override Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Date_Opened_Override__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Opened - Override</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Dormant_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dormant Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Employee_Indicator__c</fullName>
        <label>Employee Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>TBA</fullName>
                </value>
                <value>
                    <fullName>Undefined/Other</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_FIS_Automatic_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Automatic Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FIS_Manual_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Manual Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FIS_Secondary_Officer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Secondary Officer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FIS_Secondary_Officer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Secondary Officer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_In_Out_CRA_Assessment_Area__c</fullName>
        <description>Part of DBSFCRM - 1207</description>
        <label>In/Out CRA Assessment Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Is_Closed__c</fullName>
        <formula>IF( TEXT(FinServ__CloseDate__c) == null ,true , IF(FinServ__CloseDate__c &gt; TODAY() ,true ,false ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Last_Transaction_Amount__c</fullName>
        <description>Part of DBSFCRM - 1207</description>
        <label>Last Transaction $ Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Latitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Loan_Commitment_Previous_Month_End__c</fullName>
        <label>Loan Commitment $ - Previous Month End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Longitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Low_to_Mod_Income_Minority_Tract__c</fullName>
        <label>Low to Mod Income/Minority Tract?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low to Mod Income and Minority Tract</fullName>
                </value>
                <value>
                    <fullName>Low to Moderate Income ONLY</fullName>
                </value>
                <value>
                    <fullName>Minority Tract ONLY</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_MDM_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Record ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_Maturity_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Note_Number__c</fullName>
        <description>Part of DBSFCRM-1207</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Note Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Offficer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Officer_Name_Previous_Month_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Name - Previous Month End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Officer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Officer_Number_Previous_Month_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Number - Previous Month End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Officer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Officer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Owner_Name__c</fullName>
        <description>Owner Full Name</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Posting_Option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Posting Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Previous_Month_s_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Month’s End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Group Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_SSN_TIN__c</fullName>
        <label>SSN/TIN</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>WT_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__PrimaryOwner__c</columns>
        <columns>FinServ__FinancialAccountNumber__c</columns>
        <columns>FinServ__Description__c</columns>
        <columns>FinServ__Balance__c</columns>
        <columns>FinServ__OpenDate__c</columns>
        <columns>FinServ__FinancialAccountType__c</columns>
        <columns>WT_Service__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>FinServ__AutoLoan</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of a motor vehicle.</description>
        <label>Auto Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__BankingAccount</fullName>
        <active>true</active>
        <description>Bank accounts such as savings, checking, and credit</description>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__CheckingAccount</fullName>
        <active>true</active>
        <description>Represents a deposit account for withdrawals and deposits</description>
        <label>Checking Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__CreditCard</fullName>
        <active>true</active>
        <description>Represents a type of payment card issued with a line of credit</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>false</active>
        <description>General financial accounts</description>
        <label>General Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__HELOC</fullName>
        <active>true</active>
        <description>Represents a line of credit secured by equity in real property.</description>
        <label>HELOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InsurancePolicy</fullName>
        <active>true</active>
        <description>Insurance policies</description>
        <label>Insurance Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InvestmentAccount</fullName>
        <active>true</active>
        <description>Investment accounts such as brokerage accounts</description>
        <label>Investment Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__LoanAccount</fullName>
        <active>true</active>
        <description>Represents a type of account for financing a purchase.</description>
        <label>Loan Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Mortgage</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of real property.</description>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__SavingsAccount</fullName>
        <active>true</active>
        <description>Represents an interest-bearing deposit account</description>
        <label>Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__TreasuryService</fullName>
        <active>true</active>
        <description>Accounts that provide transaction or investment services for chief financial officers or treasurers.</description>
        <label>Treasury Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Letter_of_Credit</fullName>
        <active>true</active>
        <description>Represent a type of account for Letter of Credit</description>
        <label>Letter of Credit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__ManagedAndHeldAwayCannotBeBothSelected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(FinServ__Managed__c, FinServ__HeldAway__c)</errorConditionFormula>
        <errorMessage>Select either Managed or Held Away for this Financial Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NoJointOwnerForIndividualAccounts</fullName>
        <active>true</active>
        <description>Error message when a joint owner is entered for an individually owned account.</description>
        <errorConditionFormula>AND(ISPICKVAL(FinServ__Ownership__c , &quot;Individual&quot;), NOT(ISBLANK(FinServ__JointOwner__c)))</errorConditionFormula>
        <errorMessage>Individually owned accounts can&apos;t have a joint owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__PrimaryAndJointOwnerCannotBeSame</fullName>
        <active>true</active>
        <description>Check to see if Primary Owner and the Joint Owner are the same person</description>
        <errorConditionFormula>FinServ__PrimaryOwner__c = FinServ__JointOwner__c</errorConditionFormula>
        <errorMessage>The primary and joint owner must be different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_TIN_MustBe9DigitsOnFinancialAccount</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c , 
NOT(
OR(  LEN(FinServ__TaxID__c) = 9,ISBLANK(FinServ__TaxID__c))
) )</errorConditionFormula>
        <errorMessage>SSN/TIN must be 9 digits.</errorMessage>
    </validationRules>
</CustomObject>